chore: fix on mobile and simplify

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -21,23 +21,27 @@ main .section.cards-container .cards-wrapper {
     margin: 0;
     padding: 0;
     display: grid;
-
-    /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 0;
 }
 
 .cards > ul > li {
-    background-color: var(--background-color);
     position: relative;
-}
-
-.cards > ul > li:nth-child(1) {
-    grid-row: span 2;
     color: white;
 }
 
-.cards > ul > li p:nth-child(1) {
+.cards > ul > li a:any-link {
+    font-weight: 250;
+    text-decoration: none;
+    color: white;
+}
+
+.cards > ul > li h3 + p {
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.cards > ul > li p:first-of-type {
     font-size: 14px; 
     font-weight: 150;
 }
@@ -46,71 +50,74 @@ main .section.cards-container .cards-wrapper {
     margin-top: 0;
 }
 
-.cards > ul > li h3 a {
-    color: white;
-    font-size: 55px;
-    font-weight: 250;
-}
-
-.cards > ul > li:hover h3 a {
-    text-decoration: none;
-  }
-
-.cards > ul > li p:nth-child(3) {
-    font-size: 20px;
-    font-weight: 300;
-}
-
-.cards > ul > li p:nth-child(5) {
+.cards > ul > li p:last-of-type {
     font-size: 14px;
     font-weight: 200;
     text-decoration: underline; 
+}
+
+.cards > ul > li:nth-of-type(2n) {
+    color: var(--text-color);
+}
+
+.cards > ul > li:nth-of-type(2n) a:any-link {
+    color: var(--text-color);
 }
 
 .cards .cards-card-body {
-    margin: 16px;
-    position: absolute;
-    bottom: 5%;
-    padding-left: 3%;
-}
-
-.cards > ul > li:nth-last-child(2) .cards-card-body {
-    top: 20%;
-    bottom: 20%;
-    color: black;
-}
-
-.cards > ul > li:nth-last-child(2) h3 a {
-    color: black;
-}
-
-.cards > ul > li:last-child .cards-card-body {
-    top: 20%;
-    bottom: 20%;
-    color: white;
-}
-
-.cards > ul > li:last-child p:nth-child(4) {
-    font-size: 14px;
-    font-weight: 200;
-    text-decoration: underline; 
+    padding: 30px;
 }
 
 .cards .cards-card-image {
     line-height: 0;
-    position: relative;
-}
-
-.cards .cards-card-body > *:first-child {
-    margin-top: 0;
-}
-
-.cards > ul > li:nth-child(1) img {
+    position: absolute;
+    z-index: -1;
+    top: 0;
     width: 100%;
-    object-fit: cover;
+    height: 100%;
 }
 
-.cards > ul > li:nth-child(2) img {
-    width: 100%;
+.cards .cards-card-image picture {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.cards .cards-card-image img {
     object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+
+@media (min-width: 900px) {
+    .cards > ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 0;
+    }
+
+    .cards > ul > li:nth-child(1) {
+        grid-row: span 2;
+    }
+
+    .cards > ul > li:first-child .cards-card-body {
+        position: absolute;
+        bottom: 0;
+    }
+
+    .cards > ul > li h3 a {
+        font-size: 55px;
+    }
+
+    .cards > ul > li:last-child p:nth-child(4) {
+        font-size: 14px;
+        font-weight: 200;
+        text-decoration: underline; 
+    }
 }
